Implemented the map into the application with zoom on Lithuania. You'll need to download a different emulator in order to run the app because Google Play Store is missing in the newest version. Here's the link: https://prnt.sc/H4oEDkTiDMiD

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Material3.Light"
         tools:targetApi="31">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDZz3xTl11PVJPr-yhKiw9sJ-6OJZYzhOo">
+        </meta-data>
         <activity
             android:name=".ProfileEditActivity"
             android:exported="false" />
