Pakeistas Main menu, nuotraukos ir Post kurie yra ikelti duomenu bazeje yra perkeliami i Main menu, taip pat yra ikeliamas ir zmogaus komentaras, visa tai vyksta RealTime

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,10 +26,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Material3.Light"
         tools:targetApi="31">
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDZz3xTl11PVJPr-yhKiw9sJ-6OJZYzhOo">
-        </meta-data>
+            android:value="AIzaSyDZz3xTl11PVJPr-yhKiw9sJ-6OJZYzhOo"></meta-data>
+
         <activity
             android:name=".ProfileEditActivity"
             android:exported="false" />
@@ -68,7 +69,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
