--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
         android:theme="@style/Theme.Material3.Light"
         tools:targetApi="31">
         <activity
+            android:name=".PointsShopActivity2"
+            android:exported="false" />
+        <activity
             android:name=".EventDetailsActivity"
             android:exported="false" />
         <activity
